fix: bg rendering on Safari

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,5 @@
 html {
-  background: linear-gradient(#000000, #000000),
-    url("https://source.unsplash.com/8xznAGy4HcY/1920x1080") center center no-repeat fixed;
+  background: url("https://source.unsplash.com/8xznAGy4HcY/1920x1080") center center no-repeat fixed;
   background-size: cover;
 }
 
